# wattwert-serverless-test

./: README.md  cloudbuild.yaml  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  main.py  requirements.txt
backend/States_data_download/Baden-Württemberg/: LOD2downloader.py
backend/States_data_download/Bayern/: LOD2downloader.py  laserdownloader.py
backend/States_data_download/Berlin/: LOD2downloader.py
backend/States_data_download/Brandenburg/: LOD2downloader.py
backend/Supabase_database/: handlers.py
backend/aufmass_core/: database_download_functions.py  database_upload_functions.py
backend/helpers/: addressf.py  attachedWalls.py  geometry_helpers.py  geomf.py  laserf.py  repair_geometry.py  roof_repair.py  states_UTM_zones.json  states_utm_zones.py  volume_calc.py
backend/visualization/: house_viz.py
backend_geruest/: .dockerignore  .gitignore  Dockerfile  handling.py  main.py  pyproject.toml  requirements.txt  run_backend_geruest.bat  segmentation_handler.py
backend_geruest/Supabase_database/: client.py  handlers.py
backend_geruest/Supabase_database/sql/: create_ergebnisse_varianten_efh.sql  create_ergebnisse_varianten_mfh.sql
backend_geruest/api_helpers/: gcp_auth.py
backend_geruest/aufmass_core/: README.md  aufmass_main.py
backend_geruest/aufmass_core/datastructure/: Notes.md  aufmass_diagram.mermaid
backend_geruest/aufmass_core/mainprocessing/: _7_main_segmentation.py
backend_geruest/aufmass_core/models/: sam3_model_cache.py
backend_geruest/aufmass_core/models/sam3/: image_inference.py
backend_geruest/aufmass_core/models/sam3/sam3/model/: decoder.py  position_encoding.py
backend_geruest/aufmass_core/postprocessing/: _7_1_filter_mask.py  _8_get_reference_scale.py
backend_geruest/aufmass_core/preprocessing/: _0_helper_lensfun.py  _1_lens_correction.py  _2_identify_main_facade_sam3.py  _3_crop_image.py  _4_0_rectify_image_automated.py  _4_1_fallback_manual_rectify_image.py
backend_geruest/geruest_core/_0_datastructure/: geruest_classes.py
backend_geruest/wattwert_only_mtl/: README.md  requirements.txt
backend_geruest/wattwert_only_mtl/configs/: config.yaml
backend_geruest/wattwert_only_mtl/scripts/: debug_mask.py  infer.py  run_evaluation.py  segmentation_postprocessor_simple.py  train.py
backend_geruest/wattwert_only_mtl/src/wattwert_mtl/: data_handling.py  inference.py  model.py  trainer.py
frontend/: .dockerignore  Dockerfile  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json
frontend/public/: HouseAnimation.webm
frontend/src/: config.ts
(+133 files in other folders)
